<?xml version="1.0"?>
<package format="3">
  <name>rvizweb</name>
  <version>0.0.0</version>
  <description>RVizWeb: RViz on the browser</description>

  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>nodejs</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>rosbridge_server</depend>
  <depend>tf2_web_republisher</depend>
  <depend>web_video_server</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
